# sensors-project

./: .gitignore  MSE3302B_RPS1_Project_Report_final.ipynb  MSE3302B_RPS1_Project_Report_final1.ipynb  README.md  UserManual_3302B_v2.ipynb  cv_bridge.py  pyproject.toml  rps.py  simulate.py  test_cv.py  train_rps_classifier.py
.ipynb_checkpoints/: MSE3302B_RPS1_Project_Report_final-checkpoint.ipynb  MSE3302B_RPS1_Project_Report_final1-checkpoint.ipynb
ESP32_RPS/: ESP32_RPS.ino
ESP32_RPS_2/: ESP32_RPS_2.ino
ESP32_RPS_L/: ESP32_RPS_L.ino
ESP32_RPS_R/: ESP32_RPS_R.ino
cv_src/prof/CameraToClassification/: CameraGUI.py  DebugCameraGUI.py  FinalModelImagePreperation.py  ImageConversion.py  Main.ipynb  ModelTraining.py  Sam2CameraCollection.py  Sam2CameraTesting.py  Sam2ImageProcessing.py
cv_src/prof/HandPhotos/: ClassificationModel.ipynb
