[project]
name = "rps"
version = "0.1.0"
description = "Rock paper scissors minus one"
authors = [
    {name = "HW",email = "wen.howard2012@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "bleak (>=2.1.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
