[project]
name = "rps"
version = "0.1.0"
description = "Rock paper scissors minus one"
authors = [
    {name = "HW",email = "wen.howard2012@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "bleak (>=2.1.1,<3.0.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "scipy (>=1.17.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)"
]
